--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ jdk:
 
 install:
     - mvn install -DskipTests=true -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -B -V
+    
+script:
+    - echo "skipping tests"
