--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.ralleytn.plugins.jinput.xinput</groupId>
 	<artifactId>XInput-Plugin-for-JInput</artifactId>
-	<version>1.1.0</version>
+	<version>1.2.0</version>
 	<name>XInput Plugin for JInput</name>
 	<properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <maven.compiler.target>1.9</maven.compiler.target>
-      <maven.compiler.source>1.9</maven.compiler.source>
+      <maven.compiler.release>11</maven.compiler.release>
 	</properties>
 	<description>A plugin for JInput that provides support for XInput gamepads</description>
 	<repositories>
@@ -39,10 +38,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.8.0</version>
 				<configuration>
-					<source>9</source>
-                    <target>9</target>
+					<release>11</release>
                     <showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
 				</configuration>
@@ -53,42 +51,18 @@
 		<dependency>
 			<groupId>com.github.RalleYTN</groupId>
 			<artifactId>XInput-Wrapper</artifactId>
-			<version>1.1.0</version>
+			<version>1.2.1</version>
 		</dependency>
 		<dependency>
-			<groupId>net.java.jinput</groupId>
-			<artifactId>jinput</artifactId>
-			<version>2.0.7</version>
+  			<groupId>net.java.jinput</groupId>
+  			<artifactId>jinput</artifactId>
+  			<version>2.0.9</version>
 		</dependency>
     	<dependency>
     		<groupId>org.junit.jupiter</groupId>
-    		<artifactId>junit-jupiter-api</artifactId>
-    		<version>5.0.3</version>
+    		<artifactId>junit-jupiter</artifactId>
+    		<version>5.8.0</version>
     		<scope>test</scope>
     	</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.0.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.vintage</groupId>
-			<artifactId>junit-vintage-engine</artifactId>
-			<version>4.12.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.platform</groupId>
-			<artifactId>junit-platform-launcher</artifactId>
-			<version>1.0.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.platform</groupId>
-			<artifactId>junit-platform-runner</artifactId>
-			<version>1.0.1</version>
-			<scope>test</scope>
-		</dependency>
     </dependencies>
 </project>
